# mdpo

./: .bumpversion.cfg  .editorconfig  .gitattributes  .gitatttibutes  .gitignore  .nitpick.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  .yamllint  .yamllint.yaml  CONTRIBUTING.md  README.md  RELEASE-PROCESS.md  foo.po  index.html  input.md  input.po  lychee.toml  process-locales.py  prueba.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  docs-build.yml  pre-commit-autoupdate.yml  pre-commit.yml  test.yml  update-copyright-years-in-license-file.yml  update-copyright-years.yml
1.0.0/: .buildinfo  api.html  cli.html  implementation-notes.html  index.html  install.html  objects.inv  py-modindex.html  rationale.html  search.html  searchindex.js  traditional-approach.html
1.0.0/.doctrees/: api.doctree  changelog.doctree  cli.doctree  commands.doctree  environment.pickle  implementation-notes.doctree  index.doctree
1.0.0/_sources/: commands.rst.txt  contributing.rst.txt
1.0.0/devref/: index.html
1.0.1/: .buildinfo  changelog.html  commands.html  contributing.html  genindex.html  implementation-notes.html  objects.inv  pre-commit-hooks.html  py-modindex.html  rationale.html  related-utilities.html  searchindex.js  traditional-approach.html  tutorial.html
1.0.1/.doctrees/: contributing.doctree  environment.pickle  traditional-approach.doctree  tutorial.doctree
1.0.1/_sources/: changelog.rst.txt  cli.rst.txt  index.rst.txt  pre-commit-hooks.rst.txt
1.0.1/devref/: index.html
1.0.3/: .buildinfo  cli.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  traditional-approach.html  tutorial.html
1.0.3/.doctrees/: environment.pickle
1.0.3/_sources/: install.rst.txt
1.1.0/: .buildinfo  api.html  changelog.html  cli.html  genindex.html  index.html  install.html  objects.inv  pre-commit-hooks.html  search.html  searchindex.js  traditional-approach.html  tutorial.html
1.1.0/.doctrees/: changelog.doctree  environment.pickle  rationale.doctree
1.1.0/dev/: contributing.html  implementation-notes.html
1.1.3/: .buildinfo  api.html  commands.html  genindex.html  objects.inv  py-modindex.html  related-utilities.html  search.html  searchindex.js  traditional-approach.html
1.1.3/.doctrees/: changelog.doctree  environment.pickle  install.doctree  pre-commit-hooks.doctree
1.1.3/_sources/: index.rst.txt  install.rst.txt
1.1.3/dev/: contributing.html
1.1.4/: .buildinfo  cli.html  genindex.html  index.html  install.html  objects.inv  pre-commit-hooks.html  rationale.html  related-utilities.html  traditional-approach.html  tutorial.html
1.1.4/.doctrees/: changelog.doctree  environment.pickle  tutorial.doctree
1.1.4/_sources/: pre-commit-hooks.rst.txt  tutorial.rst.txt
1.1.4/dev/: implementation-notes.html
2.1.0/: .buildinfo  changelog.html  cli.html  genindex.html  index.html  pre-commit-hooks.html  rationale.html  search.html  searchindex.js  traditional-approach.html  tutorial.html
2.1.0/.doctrees/: changelog.doctree  environment.pickle  index.doctree
2.1.0/_sources/: index.rst.txt
2.1.0/dev/: implementation-notes.html
2.1.2/: .buildinfo  api.html  changelog.html  genindex.html  install.html  rationale.html  related-utilities.html  search.html  searchindex.js
2.1.2/.doctrees/: changelog.doctree  environment.pickle  install.doctree  pre-commit-hooks.doctree
2.1.2/_sources/: pre-commit-hooks.rst.txt
2.1.2/dev/: contributing.html
2.1.3/: .buildinfo  changelog.html  install.html  pre-commit-hooks.html  rationale.html  traditional-approach.html
2.1.3/.doctrees/: environment.pickle  traditional-approach.doctree
2.1.3/dev/: contributing.html  implementation-notes.html
doc/: api.rst  conf.py  index.rst
docs/: api.rst  before-using.rst  cli.rst  commands.rst  conf.py  contributing.rst  implementation-notes.rst  index.rst  install.rst  pc-hooks.rst  pre-commit-hooks.rst  rationale.rst  related-utilities.rst  traditional-approach.rst  tutorial.rst  useful-recipes.rst
docs/dev/: contributing.rst
docs/devref/: index.rst
latest/: .buildinfo  api.html  changelog.html  cli.html  commands.html  contributing.html  genindex.html  index.html  install.html  objects.inv  pre-commit-hooks.html  py-modindex.html  rationale.html  related-utilities.html  search.html  searchindex.js  traditional-approach.html  tutorial.html
latest/.doctrees/: api.doctree  changelog.doctree  cli.doctree  commands.doctree  environment.pickle  index.doctree  install.doctree  pre-commit-hooks.doctree  rationale.doctree  related-utilities.doctree  tutorial.doctree
latest/_sources/: api.rst.txt  cli.rst.txt  pre-commit-hooks.rst.txt  related-utilities.rst.txt  traditional-approach.rst.txt  tutorial.rst.txt
latest/dev/: contributing.html  implementation-notes.html
locale/readme/: es.md  es.po
md2po/: __init__.py  __main__.py
mdpo/: __init__.py  cli.py  command.py  compat.py  context.py  event.py  html.py  io.py  md.py  md4c.py  po.py  polib.py  text.py
mdpo/md2po/: __init__.py  __main__.py
mdpo/md2po2md/: __init__.py  __main__.py
mdpo/mdpo2html/: __init__.py  __main__.py
mdpo/po2md/: __init__.py  __main__.py
scripts/: build.sh
src/mdpo/: __init__.py  cli.py  compat.py  event.py  io.py  md.py  md4c.py  po.py  polib.py  text.py
src/pygettextpo/: .gitignore  Makefile  README.md  gettextpo.c  setup.py  test_gettextpo.py
test/: conftest.py  test_cli.py  test_command.py  test_context.py  test_convert.py  test_converter.py  test_custom_markup.py  test_disable.py  test_event.py  test_extract.py  test_extracted_comments.py  test_extractor.py  test_include_comments.py  test_init.py  test_io.py  test_md.py  test_md4c.py  test_po.py  test_pre_commit_hooks.py  test_text.py
test/test_integration/: test_pre_commit_hooks.py
test/test_md2po/: test_events.py  test_extract.py  test_extractor.py  test_location.py  test_md2po_cli.py  test_md2po_events.py  test_obsoletes.py  test_x_headers.py
test/test_unit/: test_command.py  (+4 more)
tests/: conftest.py
(+774 files in other folders)
