[metadata]
name = mdpo
version = 0.3.48
description = Markdown file translation utilities using PO files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/mdpo
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Internationalization
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: Markdown
project_urls =
    Documentation=https://mdpo.readthedocs.io
    Source=https://github.com/mondeja/mdpo
    Issue Tracker=https://github.com/mondeja/mdpo/issues

[options]
packages =
    mdpo
    mdpo.md2po
    mdpo.mdpo2html
    mdpo.po2md
install_requires =
    polib>=1.1.0
    pymd4c==0.4.6.0b1
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    md2po = mdpo.md2po.__main__:main
    po2md = mdpo.po2md.__main__:main
    mdpo2html = mdpo.mdpo2html.__main__:main

[options.extras_require]
dev =
    Sphinx==3.5.4
    bump2version==1.0.1
    flake8==3.9.1
    flake8-docstrings==1.6.0
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.8.0
    pre-commit==2.12.1
    pytest==6.2.3
    pytest-cov==2.11.1
    sphinx-argparse-cli==1.6.0
    sphinx-github-changelog==1.0.8
    sphinx-rtd-theme==0.5.2
    yamllint==1.26.1
doc =
    Sphinx==3.5.4
    sphinx-argparse-cli==1.6.0
    sphinx-github-changelog==1.0.8
    sphinx-rtd-theme==0.5.2
lint =
    flake8==3.9.1
    flake8-docstrings==1.6.0
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.8.0
    yamllint==1.26.1
test =
    pytest==6.2.3
    pytest-cov==2.11.1

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    except ImportError:
    if '-h' in args or '--help' in args:

[flake8]
per-file-ignores =
    setup.py: D100
    mdpo/md2po/__init__.py: D101, D102, D103, D107, D205, D415
    mdpo/md2po/__main__.py: D103
    mdpo/mdpo2html/__init__.py: D101, D102, D103, D107, D205, D415
    mdpo/mdpo2html/__main__.py: D103
    mdpo/po2md/__init__.py: D101, D102, D103, D107
    mdpo/po2md/__main__.py: D103
docstring-convention = google

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 79
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
