[metadata]
name = mdpo
version = 0.3.86
description = Markdown files translation using PO files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/mdpo
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Internationalization
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: Markdown
project_urls =
    Documentation=https://mdpo.readthedocs.io
    Source=https://github.com/mondeja/mdpo
    Issue Tracker=https://github.com/mondeja/mdpo/issues

[options]
packages =
    mdpo
    mdpo.md2po
    mdpo.md2po2md
    mdpo.mdpo2html
    mdpo.po2md
install_requires =
    polib>=1.1.0
    pymd4c==1.1.2
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    md2po = mdpo.md2po.__main__:main
    po2md = mdpo.po2md.__main__:main
    md2po2md = mdpo.md2po2md.__main__:main
    mdpo2html = mdpo.mdpo2html.__main__:main

[options.extras_require]
dev =
    Sphinx==4.4.0
    bump2version==1.0.1
    flake8==4.0.1
    flake8-builtins
    flake8-comprehensions
    flake8-docstrings
    flake8-executable
    flake8-implicit-str-concat
    flake8-print
    flake8-printf-formatting
    flake8-pytest-style
    isort==5.9.1
    nitpick==0.32.0
    pre-commit==2.15.0
    pytest==6.2.4
    pytest-cov==2.12.1
    pytest-maybe-raises==0.1.1
    sphinx-argparse-cli==1.8.3
    sphinx-github-changelog==1.2.0
    sphinx-rtd-theme==1.0.0
    sphinx-tabs==3.2.0
    yamllint==1.26.1
doc =
    Sphinx==4.4.0
    sphinx-argparse-cli==1.8.3
    sphinx-github-changelog==1.2.0
    sphinx-rtd-theme==1.0.0
    sphinx-tabs==3.2.0
lint =
    flake8==4.0.1
    flake8-builtins
    flake8-comprehensions
    flake8-docstrings
    flake8-executable
    flake8-implicit-str-concat
    flake8-print
    flake8-printf-formatting
    flake8-pytest-style
    isort==5.9.1
    yamllint==1.26.1
test =
    pre-commit==2.15.0
    pytest==6.2.4
    pytest-cov==2.12.1
    pytest-maybe-raises==0.1.1

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    except ImportError:
    if '-h' in args or '--help' in args:

[flake8]
inline-quotes = single
max-line-length = 80
per-file-ignores =
    setup.py: D100
    mdpo/cli.py: D417
    tests/__init__.py: D104
    tests/conftest.py: D103
    tests/test_unit/test_event.py: D100, D103, W291, W293, E501
    tests/test_unit/*: D100, D101, D102, D103, D104, D202, D205, D415
    tests/test_integration/*: D100, D101, D102, D103, D104, D202, D205, D415
    mdpo/md.py: D101, D102, D107
    mdpo/md2po/__init__.py: D101, D102, D103, D107, D205, D415
    mdpo/md2po/__main__.py: D103
    mdpo/po2md/__init__.py: D101, D102, D103, D107
    mdpo/po2md/__main__.py: D103
    mdpo/md2po2md/__main__.py: D103
    mdpo/mdpo2html/__init__.py: D101, D102, D103, D107, D205, D415
    mdpo/mdpo2html/__main__.py: D103
docstring-convention = google
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 79
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
known_tests = tests
sections = STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
py_version = 36
extra_standard_library = contextvars,dataclasses,importlib.resources,importlib.metadata,zoneinfo,graphlib

[build_sphinx]
project = mdpo
version = 0.3.86
release = 0.3.86
source-dir = docs
build-dir = docs/_build
